adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ea, vitae aliquid corrupti in, porro facilis libero, dolore non eos assumenda consequuntur necessitatibus dolores ullam praesentium explicabo velit natus molestias.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, fugiat, minima, alias ipsam aliquid error illum odit quos corrupti inventore aperiam cumque et! A quos qui necessitatibus expedita eum odit!</p>
 </body>
 </html>
